VS ApexCode/UlbergProject0/force-app/main/default/objects/Checkout__c/Checkout__c.object-meta.xml
<CustomObject>
    <label>Checkout</label>
    <nameField>
        <displayFormat>CO-{0000000}</displayFormat>
        <label>Checkout Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Checkout</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>