VS ApexCode/UlbergProject0/force-app/main/default/objects/Checkout__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <label>Address</label>
    <length>50</length>
    <type>Text</type>
</CustomField>