VS ApexCode/UlbergProject0/force-app/main/default/objects/Checkout__c/fields/Card_Number__c.field-meta.xml
<CustomField>
    <fullName>Card_Number__c</fullName>
    <label>Card Number</label>
    <length>19</length>
    <maskChar>X</maskChar>
    <maskType>creditCard</maskType>
    <type>EncryptedText</type>
</CustomField>