VS ApexCode/UlbergProject0/force-app/main/default/objects/Checkout__c/fields/Default_Address__c.field-meta.xml
<CustomField>
    <fullName>Default_Address__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Default Address</label>
    <type>Checkbox</type>
</CustomField>