VS ApexCode/UlbergProject0/force-app/main/default/objects/Checkout__c/fields/Default_Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>Default_Payment_Method__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Default Payment  Method</label>
    <type>Checkbox</type>
</CustomField>