VS ApexCode/UlbergProject0/force-app/main/default/objects/Checkout__c/fields/Is_US_Address__c.field-meta.xml
<CustomField>
    <fullName>Is_US_Address__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is US Address</label>
    <type>Checkbox</type>
</CustomField>