VS ApexCode/UlbergProject0/force-app/main/default/objects/Checkout__c/fields/Items_In_Cart__c.field-meta.xml
<CustomField>
    <fullName>Items_In_Cart__c</fullName>
    <label>Items In Cart</label>
    <summaryForeignKey>Shopping_Cart__c.Checkout__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>