VS ApexCode/UlbergProject0/force-app/main/default/objects/Checkout__c/fields/Security_Code__c.field-meta.xml
<CustomField>
    <fullName>Security_Code__c</fullName>
    <label>Security Code</label>
    <length>3</length>
    <maskChar>X</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>