VS ApexCode/UlbergProject0/force-app/main/default/objects/Checkout__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <label>State</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Is_US_Address__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>US_State_Abbreviations</valueSetName>
    </valueSet>
</CustomField>