VS ApexCode/UlbergProject0/force-app/main/default/objects/Checkout__c/validationRules/Card_Number_Format.validationRule-meta.xml
<ValidationRule>
    <fullName>Card_Number_Format</fullName>
    <active>true</active>
    <description>Card number must be in correct format: XXXX-XXXX-XXXX-XXXX.</description>
    <errorConditionFormula>NOT(
 OR(
  LEN( Card_Number__c ) = 0 ,
  REGEX( Card_Number__c , &quot;[0-9]{4}-[0-9]{4}-[0-9]{4}-[0-9]{4}&quot;)  
 )
)</errorConditionFormula>
    <errorDisplayField>Card_Number__c</errorDisplayField>
    <errorMessage>Card number must be in correct format: XXXX-XXXX-XXXX-XXXX.</errorMessage>
</ValidationRule>